Added padding around forms

--- a/kindred_causes/main/templates/form.html
+++ b/kindred_causes/main/templates/form.html
@@ -3,7 +3,7 @@
 {% block title %}{% endblock title %}
 
 {% block content %}
-    <div class="flex grow justify-around items-center">
+    <div class="flex grow justify-around items-center my-15">
         <form class="accent bg-base-300 rounded-2xl h-fit flex flex-col space-y-10 p-10">
             <div class="text-2xl">{% block form_title %}{% endblock form_title %}</div>
 
