--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -26,7 +26,7 @@
     <fieldset class="fieldset">
         <legend class="fieldset-legend">Skills</legend>
         <details class="dropdown">
-            <summary class="select m-1">Select Skills</summary>
+            <summary class="select">Select Skills</summary>
             <ul class="menu dropdown-content bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
                 <li>
                     <label class="fieldset-label">
