--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -69,6 +69,9 @@
     <input type="datetime-local" class="input" />
 </fieldset>
 
-<a role="button" class="btn btn-primary" type="submit"> Create Event</a>
 
 {% endblock form_content%}
+
+{% block form_buttons %}
+<a role="button" class="btn btn-primary" type="submit"> Create Event</a>
+{% endblock form_buttons %}
