Adjusted styling for volunteer matching page

--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -8,17 +8,17 @@
 
 <fieldset class="fieldset w-full">
     <legend class="fieldset-legend ">Event Name</legend>
-    <input type="text" class="input" placeholder="Enter Event Name" />
+    <input type="text" class="input w-full" placeholder="Enter Event Name" />
 </fieldset>
 
 <fieldset class="fieldset w-full">
     <legend class="fieldset-legend">Event Description</legend>
-    <textarea class="textarea h-24 text-wrap" placeholder="Enter Event Description"></textarea>
+    <textarea class="textarea h-24 text-wrap w-full" placeholder="Enter Event Description"></textarea>
 </fieldset>
 
 <fieldset class="fieldset w-full">
     <legend class="fieldset-legend">Event Location</legend>
-    <input type="text" class="input" placeholder="Enter Location" />
+    <input type="text" class="input w-full" placeholder="Enter Location" />
 </fieldset>
 
 <div class="flex flex-row gap-2">
