--- a/kindred_causes/main/templates/form.html
+++ b/kindred_causes/main/templates/form.html
@@ -4,11 +4,13 @@
 
 {% block content %}
     <div class="flex grow justify-around items-center my-15">
-        <form class="accent bg-base-300 rounded-2xl h-fit flex flex-col space-y-10 p-10">
+        <form class="accent bg-base-300 rounded-2xl h-fit flex flex-col space-y-10 p-10 min-w-md">
             <div class="text-2xl font-bold">{% block form_title %}{% endblock form_title %}</div>
 
             <div class="flex flex-col justify-between items-center">{% block form_content %}{% endblock form_content %}</div>
             <div class="flex flex-row gap-2 justify-around">{% block form_buttons %}{% endblock form_buttons %}</div>
+            {% block form_messages %}{% endblock form_messages%}
         </form>
     </div>
+    
 {% endblock content %}
