--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -21,11 +21,11 @@
     <input type="text" class="input w-full" placeholder="Enter Location" />
 </fieldset>
 
-<div class="flex flex-row gap-2">
+<div class="flex flex-row gap-2 w-full">
 
-    <fieldset class="fieldset">
+    <fieldset class="fieldset w-1/2">
         <legend class="fieldset-legend">Skills</legend>
-        <details class="dropdown">
+        <details class="dropdown w-full">
             <summary class="select">Select Skills</summary>
             <ul class="menu dropdown-content bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
                 <li>
@@ -52,9 +52,9 @@
 
 
 
-    <fieldset class="fieldset">
+    <fieldset class="fieldset w-1/2">
         <legend class="fieldset-legend">Urgency</legend>
-        <select class="select">
+        <select class="select w-full">
             <option disabled selected>Choose Urgency</option>
             <option>High</option>
             <option>Medium</option>
@@ -64,14 +64,14 @@
 </div>
 
 
-<fieldset class="fieldset">
+<fieldset class="fieldset w-full">
     <legend class="fieldset-legend">Event Location</legend>
-    <input type="datetime-local" class="input" />
+    <input type="datetime-local" class="input w-full"/>
 </fieldset>
 
 
 {% endblock form_content%}
 
 {% block form_buttons %}
-<a role="button" class="btn btn-primary" type="submit"> Create Event</a>
+<a role="button" class="btn btn-primary w-full" type="submit"> Create Event</a>
 {% endblock form_buttons %}
