--- a/kindred_causes/main/templates/event_management.html
+++ b/kindred_causes/main/templates/event_management.html
@@ -65,7 +65,7 @@
 
 
 <fieldset class="fieldset w-full">
-    <legend class="fieldset-legend">Event Location</legend>
+    <legend class="fieldset-legend">Date and Time</legend>
     <input type="datetime-local" class="input w-full"/>
 </fieldset>
 
