--- a/kindred_causes/main/templates/matching_form.html
+++ b/kindred_causes/main/templates/matching_form.html
@@ -57,5 +57,5 @@
 {% block form_buttons %}
 <div class="grow"></div>
 <button class="btn btn-ghost">Cancel</button>
-<button class="btn btn-success">Assign Volunteer</button>
+<button class="btn btn-primary">Assign Volunteer</button>
 {% endblock form_buttons %}
