--- a/kindred_causes/main/templates/landing.html
+++ b/kindred_causes/main/templates/landing.html
@@ -7,11 +7,18 @@
 <div class="hero min-h-full bg-base-300">
     <div class="hero-content text-center">
       <div class="max-w-md">
-        <h1 class="text-5xl font-bold">Welcome</h1>
+        <h1 class="text-5xl font-bold">Welcome to Kindred Causes</h1>
         <p class="py-6">
           Welcome to Kindred Causes. This is a school project. Blah blah blah. Lorem ipsum dolor sit, dongus dingus solar schmidt.
         </p>
-        <a class="btn btn-accent" href="{% url 'user_registration' %}">Get Started</a>
+        <div class="flex w-full flex-col">
+          <a class="btn btn-lg btn-accent" href="{% url 'user_registration' %}">Get Started</a>
+          <div class="divider my-8">OR</div>
+          <p>
+            Already have an account?
+            <a class="link link-primary type=" submit" href="{% url 'login' %}"">Login</a>
+        </p>
+        </div>
       </div>
     </div>
   </div>
