--- a/kindred_causes/main/templates/user_registration.html
+++ b/kindred_causes/main/templates/user_registration.html
@@ -62,6 +62,6 @@
 {% block form_messages%}
 <p>
     Already have an account?
-    <a class="link link-primary type=" submit" href="{% url 'login' %}"">Login</a>
+    <a class="link text-primary-content link-primary type=" submit" href="{% url 'login' %}"">Login</a>
 </p>
 {% endblock form_messages%}
