--- a/kindred_causes/main/static/css/input.css
+++ b/kindred_causes/main/static/css/input.css
@@ -2,10 +2,88 @@
 @plugin "daisyui";
 
 
+
+
+
+@plugin "daisyui/theme" {
+  name: "emerald";
+  default: true;
+  prefersdark: true;
+  color-scheme: "light";
+  --color-base-100: oklch(100% 0 0);
+  --color-base-200: oklch(93% 0 0);
+  --color-base-300: oklch(86% 0 0);
+  --color-base-content: oklch(35.519% 0.032 262.988);
+  --color-primary: oklch(76.662% 0.135 153.45);
+  --color-primary-content: oklch(33.387% 0.04 162.24);
+  --color-secondary: oklch(61.302% 0.202 261.294);
+  --color-secondary-content: oklch(100% 0 0);
+  --color-accent: oklch(72.772% 0.149 33.2);
+  --color-accent-content: oklch(0% 0 0);
+  --color-neutral: oklch(35.519% 0.032 262.988);
+  --color-neutral-content: oklch(98.462% 0.001 247.838);
+  --color-info: oklch(72.06% 0.191 231.6);
+  --color-info-content: oklch(0% 0 0);
+  --color-success: oklch(64.8% 0.15 160);
+  --color-success-content: oklch(0% 0 0);
+  --color-warning: oklch(84.71% 0.199 83.87);
+  --color-warning-content: oklch(0% 0 0);
+  --color-error: oklch(71.76% 0.221 22.18);
+  --color-error-content: oklch(0% 0 0);
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 0;
+  --noise: 0;
+}
+
+
+
+
+
+@plugin "daisyui/theme" {
+  name: "garden";
+  default: false;
+  prefersdark: false;
+  color-scheme: "light";
+  --color-base-100: oklch(92.951% 0.002 17.197);
+  --color-base-200: oklch(86.445% 0.002 17.197);
+  --color-base-300: oklch(79.938% 0.001 17.197);
+  --color-base-content: oklch(16.961% 0.001 17.32);
+  --color-primary: oklch(62.45% 0.278 3.836);
+  --color-primary-content: oklch(100% 0 0);
+  --color-secondary: oklch(48.495% 0.11 355.095);
+  --color-secondary-content: oklch(89.699% 0.022 355.095);
+  --color-accent: oklch(56.273% 0.054 154.39);
+  --color-accent-content: oklch(100% 0 0);
+  --color-neutral: oklch(24.155% 0.049 89.07);
+  --color-neutral-content: oklch(92.951% 0.002 17.197);
+  --color-info: oklch(72.06% 0.191 231.6);
+  --color-info-content: oklch(0% 0 0);
+  --color-success: oklch(64.8% 0.15 160);
+  --color-success-content: oklch(0% 0 0);
+  --color-warning: oklch(84.71% 0.199 83.87);
+  --color-warning-content: oklch(0% 0 0);
+  --color-error: oklch(71.76% 0.221 22.18);
+  --color-error-content: oklch(0% 0 0);
+  --radius-selector: 1rem;
+  --radius-field: 0.5rem;
+  --radius-box: 1rem;
+  --size-selector: 0.25rem;
+  --size-field: 0.25rem;
+  --border: 1px;
+  --depth: 0;
+  --noise: 0;
+}
+
+
 @plugin "daisyui/theme" {
     name: "cupcake";
-    default: true;
-    prefersdark: true;
+    default: false;
+    prefersdark: false;
     color-scheme: "light";
     --color-base-100: oklch(97.788% 0.004 56.375);
     --color-base-200: oklch(93.982% 0.007 61.449);
