Change the account text for Availability

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -55,11 +55,11 @@
               <div class="collapse-content">
                   <p class="text-lg">Name: John Doe</p>
                   <p class="text-lg">Joined: January 1, 2020</p>
-                  <p class="text-lg">Availability 1: January 1, 2020</p>
-                  <p class="text-lg">Availability 2: January 1, 2020</p>
+                  <p class="text-lg">Start of Availability: January 1, 1989</p>
+                  <p class="text-lg">End of Availability: January 1, 1999</p>
                   <p class="text-lg">City: New York</p>
                   <p class="text-lg">State: NY</p>
-                  <p class="text-lg">Skills: Eating</p>
+                  <p class="text-lg">Skills: Eating, Sleeping, Programming</p>
               </div>
           </div>
           
