Add button Volunteer History in Account page, link it to url

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -12,6 +12,7 @@
           <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-60 h-60">
           <div class="flex flex-col space-y-4 w-full">
               <a href="/account_management" class="btn btn-primary w-2/3 mx-auto">Edit Profile</a>
+              <a href="/volunteer_history" class="btn btn-accent w-2/3 mx-auto">Volunteer History</a>
               <button class="btn btn-secondary w-2/3 mx-auto">Logout</button>
           </div>
         </div>
