Add title for account_management

--- a/kindred_causes/main/templates/profile_management.html
+++ b/kindred_causes/main/templates/profile_management.html
@@ -1,6 +1,7 @@
 {% extends 'form.html' %}
 
-{% block form_title %}Profile Management{% endblock form_title %}
+{% block title %}Account Management{% endblock title %}
+{% block form_title %}Account Management{% endblock form_title %}
 
 {% block form_content %}
 <!-- Full Name -->
