Add user ID in private information of Account

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -23,7 +23,7 @@
             <!-- Stats -->
             <div class="stats shadow w-full">
                 <div class="stat">
-                    <div class="stat-title">Vistor</div>
+                    <div class="stat-title"># Of Users</div>
                     <div class="stat-value">31K</div>
                     <div class="stat-desc">Jan 1st - Feb 1st</div>
                 </div>
@@ -80,6 +80,7 @@
                   <p class="text-lg">Address 2: None</p>
                   <p class="text-lg">Zip Code: 11223</p>
                   <p class="text-lg">Phone: (123) 456-7890</p>
+                  <p class="text-lg">User ID: 223344</p>
               </div>
           </div>
 
