I changed the profile photo of Account page ... Then change it back

--- a/kindred_causes/main/templates/account.html
+++ b/kindred_causes/main/templates/account.html
@@ -8,6 +8,8 @@
     <div class="grid grid-cols-2 gap-10 w-full max-w-5xl">
         
         <!-- Left Column: Avatar & Actions -->
+        <!--Optional Profile picture src https://i.imgur.com/2H4Zt9P.jpeg -->
+        <!--Optional Profile picture src https://i1.sndcdn.com/artworks-x8zI2HVC2pnkK7F5-4xKLyA-t1080x1080.jpg -->
         <div class="flex flex-col items-center space-y-6">
           <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" alt="Avatar" class="rounded-full w-60 h-60">
           <div class="flex flex-col space-y-4 w-full">
@@ -61,13 +63,13 @@
               <input type="radio" name="accordion-info" checked />
               <div class="collapse-title text-xl font-medium">Public Information</div>
               <div class="collapse-content">
-                  <p class="text-lg">Name: John Doe</p>
-                  <p class="text-lg">Joined: January 1, 2020</p>
-                  <p class="text-lg">Start of Availability: January 1, 1989</p>
-                  <p class="text-lg">End of Availability: January 1, 1999</p>
-                  <p class="text-lg">City: New York</p>
-                  <p class="text-lg">State: NY</p>
-                  <p class="text-lg">Skills: Eating, Sleeping, Programming</p>
+                    <p class="text-lg">Name: John Doe</p>
+                    <p class="text-lg">Joined: January 1, 2020</p>
+                    <p class="text-lg">Start of Availability: January 1, 1989</p>
+                    <p class="text-lg">End of Availability: January 1, 1999</p>
+                    <p class="text-lg">City: New York</p>
+                    <p class="text-lg">State: NY</p>
+                    <p class="text-lg">Skills: Eating, Sleeping, Programming</p>
               </div>
           </div>
           
