Fixed bugs on date on profile management

--- a/kindred_causes/main/templates/profile_management.html
+++ b/kindred_causes/main/templates/profile_management.html
@@ -5,7 +5,7 @@
 {% block form_action %}{% url 'account_management' %}{% endblock form_action %}
 
 {% block form_content %}
-{% csrf_token %}
+<!--{% csrf_token %}-->
 <!-- Full Name -->
 <fieldset class="fieldset w-full">
     <legend class="fieldset-legend ">Name</legend>
