Added login/logout functionality

--- a/kindred_causes/main/templates/home.html
+++ b/kindred_causes/main/templates/home.html
@@ -4,4 +4,9 @@
 
 {% block content %}
 <div>Home</div>
+<form action="{% url 'logout' %}" method="post">
+    {% csrf_token %}
+    <button type="submit">Log Out</button>
+</form>
+  
 {% endblock content %}
