--- a/kindred_causes/templates/registration/login.html
+++ b/kindred_causes/templates/registration/login.html
@@ -4,9 +4,8 @@
 {% block form_title %}Login{% endblock form_title %}
 
 {% block form_content %}
-
-{{ form }}
-
+{{ form.username }}
+{{ form.password }}
 {% comment %} <fieldset class="fieldset w-full">
     <legend class="fieldset-legend ">Email</legend>
     <label class="input validator w-full">
